[gd_scene load_steps=8 format=2]

[ext_resource path="res://interface/CanvasLayer.gd" type="Script" id=1]
[ext_resource path="res://interface/molde barra.png" type="Texture" id=2]
[ext_resource path="res://interface/barra amarela nova.png" type="Texture" id=3]
[ext_resource path="res://Plataforma/verificado.png" type="Texture" id=4]
[ext_resource path="res://npc_Txt_Box/MEGAMAN10.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://engrenagem.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 19
font_data = ExtResource( 5 )

[node name="hud" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource( 1 )

[node name="Verificado" type="Sprite" parent="CanvasLayer"]
position = Vector2( 51, 53 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )

[node name="Label4" type="Label" parent="CanvasLayer"]
margin_left = 173.0
margin_top = 374.0
margin_right = 296.0
margin_bottom = 443.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="CanvasLayer"]
margin_left = 443.0
margin_top = 168.0
margin_right = 567.0
margin_bottom = 249.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer"]
margin_left = 33.0
margin_top = 13.0
margin_right = 240.0
margin_bottom = 72.0
custom_colors/font_color = Color( 1, 0.972549, 0.27451, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BarraAmarela1" type="Sprite" parent="CanvasLayer"]
position = Vector2( 89.5, 54 )
scale = Vector2( 0.202381, 0.171875 )
texture = ExtResource( 3 )

[node name="BarraAmarela2" type="Sprite" parent="CanvasLayer"]
position = Vector2( 109.5, 54 )
scale = Vector2( 0.202381, 0.171875 )
texture = ExtResource( 3 )

[node name="BarraAmarela3" type="Sprite" parent="CanvasLayer"]
position = Vector2( 128.5, 54 )
scale = Vector2( 0.202381, 0.171875 )
texture = ExtResource( 3 )

[node name="BarraAmarela4" type="Sprite" parent="CanvasLayer"]
position = Vector2( 148.5, 54 )
scale = Vector2( 0.202381, 0.171875 )
texture = ExtResource( 3 )

[node name="BarraAmarela5" type="Sprite" parent="CanvasLayer"]
position = Vector2( 167.5, 54 )
scale = Vector2( 0.202381, 0.171875 )
texture = ExtResource( 3 )

[node name="BarraAmarela6" type="Sprite" parent="CanvasLayer"]
position = Vector2( 187.5, 54 )
scale = Vector2( 0.202381, 0.171875 )
texture = ExtResource( 3 )

[node name="BarraAmarela7" type="Sprite" parent="CanvasLayer"]
position = Vector2( 207.5, 54 )
scale = Vector2( 0.202381, 0.171875 )
texture = ExtResource( 3 )

[node name="BarraAmarela8" type="Sprite" parent="CanvasLayer"]
position = Vector2( 227.5, 54 )
scale = Vector2( 0.202381, 0.171875 )
texture = ExtResource( 3 )

[node name="BarraAmarela9" type="Sprite" parent="CanvasLayer"]
position = Vector2( 246.5, 54 )
scale = Vector2( 0.202381, 0.171875 )
texture = ExtResource( 3 )

[node name="BarraAmarela10" type="Sprite" parent="CanvasLayer"]
position = Vector2( 266.5, 54 )
scale = Vector2( 0.202381, 0.171875 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = 13.0
margin_top = 117.0
margin_right = 339.0
margin_bottom = 197.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoldeBarra" type="Sprite" parent="CanvasLayer"]
position = Vector2( 178, 53.9375 )
scale = Vector2( 0.308166, 0.210366 )
texture = ExtResource( 2 )

[node name="back_to_Menu" type="TextureButton" parent="CanvasLayer"]
margin_left = 1132.0
margin_top = 30.0
margin_right = 1702.0
margin_bottom = 624.0
rect_scale = Vector2( 0.1, 0.1 )
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
